[build-system]
requires = ["setuptools >= 69.1.1"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.12"
name = "bah"
description = "bah"
version = "1.0.0"
authors = [
  {name = "Maxime Deslauriers", email = "maxime.deslauriers.1@ulaval.ca"},
]
maintainers = [
  {name = "Maxime Deslauriers", email = "maxime.deslauriers.1@ulaval.ca"},
]
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
bah = "bah.main:main"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = 3.12

[testenv]
deps =
  pytest==7.4.4
  adafruit-circuitpython-displayio-ssd1306==3.0.6
  adafruit-circuitpython-display-text==5.0.4
  adafruit-circuitpython-display-shapes==2.10.6
  coverage==7.14.0
commands =
  coverage run --branch --source=bah -m pytest tests/tests.py
  coverage report -m
"""
